--- a/templates/base.html
+++ b/templates/base.html
@@ -37,20 +37,18 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
+      <div class="row">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="#" alt="" width="30" height="24" class="d-inline-block align-text-top">
-            <strong>Sustainable</strong> 
+          <a class="navbar-brand" href="{% url 'home' %}">
+            <img src="#" alt="" width="50" height="50" class="d-inline-block align-text-top">
+            <strong>Sustainable Life</strong> 
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
           <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                 <li class="list-inline-item dropdown">
                     <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="text-center">
+                        <div class="text-center" style="color: green">
                             <div><i class="fas fa-user fa-lg"></i></div>
                             <p class="my-0">My Account</p>
                         </div>
@@ -70,8 +68,8 @@
                 </li>
                 <li class="list-inline-item">
                     <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                        <div class="text-center">
-                            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                        <div class="text-center" style="color: green">
+                            <div><i class="fas fa-shopping-basket fa-lg"></i></div>
                             <p class="my-0">
                                 {% if grand_total %}
                                     ${{ grand_total|floatformat:2 }}
@@ -84,28 +82,35 @@
                 </li>
             </ul>
         </div>
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+          <ul class="list-inline list-unstyled text-center text-lg-right my-0">
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="#">Everything</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#">Clothing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link" href="#">Groceries</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Homeware</a>
               </li>
             </ul>
           </div>
         </div>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <form class="d-flex" form method="GET" action="">
+          <input class="form-control me-2" type="text" placeholder="Search for something" aria-label="Search" name="q">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+      </div>
       </nav>
-
-    </header>
+    </div>
+    </header> -->
 
     {% if messages %}
         <div class="message-container"></div>
