--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
     {% block corecss %}
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
@@ -36,81 +38,82 @@
     <title>Sustainable {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top">
-      <div class="row">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'home' %}">
-            <img src="#" alt="" width="50" height="50" class="d-inline-block align-text-top">
-            <strong>Sustainable Life</strong> 
-          </a>
-          <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-            <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                <li class="list-inline-item dropdown">
-                    <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <div class="text-center" style="color: green">
-                            <div><i class="fas fa-user fa-lg"></i></div>
-                            <p class="my-0">My Account</p>
-                        </div>
-                    </a>
-                    <div class="dropdown-menu border-0" aria-labelledby="user-options">
-                        {% if request.user.is_authenticated %}
-                            {% if request.user.is_superuser %}
-                                <a href="" class="dropdown-item">Product Management</a>
-                            {% endif %}
-                            <a href="" class="dropdown-item">My Profile</a>
-                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                        {% else %}
-                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
-                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-                        {% endif %}
-                    </div>
-                </li>
-                <li class="list-inline-item">
-                    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
-                        <div class="text-center" style="color: green">
-                            <div><i class="fas fa-shopping-basket fa-lg"></i></div>
-                            <p class="my-0">
-                                {% if grand_total %}
-                                    ${{ grand_total|floatformat:2 }}
-                                {% else %}
-                                    $0.00
-                                {% endif %}
-                            </p>
-                        </div>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+    <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <img src="{% static 'assets/images/tree.png' %}" alt="" width="50" height="50" class="d-inline-block align-text-centre">
+        <strong>SUSTAINABLE</strong> LIFE
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>  
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">All Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Clothing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Groceries</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Homeware</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link" href="#">Deals</a>
+          </li> 
+        </ul>
+        <div>
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              
-              <li class="nav-item">
-                <a class="nav-link" href="#">Everything</a>
+              <li class="list-inline-item dropdown">
+                  <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <div class="text-center" style="color: green">
+                          <div><i class="fas fa-user fa-lg"></i></div>
+                          <p class="my-0">My Account</p>
+                      </div>
+                  </a>
+                  <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                      {% if request.user.is_authenticated %}
+                          {% if request.user.is_superuser %}
+                              <a href="" class="dropdown-item">Product Management</a>
+                          {% endif %}
+                          <a href="" class="dropdown-item">My Profile</a>
+                          <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                      {% else %}
+                          <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                          <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                      {% endif %}
+                  </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Clothing</a>
+              <li class="list-inline-item">
+                  <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                      <div class="text-center" style="color: green">
+                          <div><i class="fas fa-shopping-basket fa-lg"></i></div>
+                          <p class="my-0">
+                              {% if grand_total %}
+                                  ${{ grand_total|floatformat:2 }}
+                              {% else %}
+                                  $0.00
+                              {% endif %}
+                          </p>
+                      </div>
+                  </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Groceries</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Homeware</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-        <form class="d-flex" form method="GET" action="">
-          <input class="form-control me-2" type="text" placeholder="Search for something" aria-label="Search" name="q">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          </ul>
+      </div>
+      
+
+        <form class="form-inline my-2 my-lg-0" method="GET" action="">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search our site" aria-label="Search" name="q"> 
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
-      </nav>
-    </div>
-    </header> -->
+    </nav>
+  </header>
+  </body>
+    
 
     {% if messages %}
         <div class="message-container"></div>
