add css styling and images to boddy and header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,8 +5,18 @@ html {
 body {
     background: url('/media/background_image.webp') no-repeat center center fixed;
     background-size: cover;
-    height: calc(100vh - 164px);
+    height: calc(100vh - 184px);
     color: #555;
     font-family: 'Oswald', sans-serif;
 }
 
+
+.go-shopping-button {
+    background: white;
+    color: black;
+    min-width: 200px;
+}
+
+.logo-font {
+    text-transform: uppercase;
+}
