add off white color overlay to products page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,3 +24,13 @@ body {
 .bg-black {
     background:green;
 }
+
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: #FAF9F6;
+	z-index: -1;
+}
