--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -5,40 +5,34 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid">
+
     <div class="row">
         <div class="col text-center mt-2">
-            <h1 class="logo-font">Products</h1>
-            
+            <h1 class="logo-font">Products</h1>          
         </div>
     </div>
-    <div class="row mt-2 mr-2 ml-2">
-        {% for product in products %}
-        <div class="card-deck">
-            <div class="card img-fluid">
-                {% if product.image %}
-                <a href="">
-              <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
-                </a>
-                {% else %}
-                <a href="">
+    <div class="row">
+      {% for product in products %}
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+              <div class="card h-100 border-0">
+                <div class="card" >
+                  {% if product.image %}
+                  <a href="">
+                  <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                  </a>
+                  {% else %}
+                  <a href="">
                     <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
-                </a>
-                {% endif %}
-              <div class="card-body">
-                <h5 class="card-title">{{ product.name }}</h5>
-                <p class="card-text">£{{ product.price }}</p>
+                    </a>
+                  {% endif %}
+                  <div class="card-body">
+                    <h4 class="card-title">{{ product.name }}</h4>
+                    <h5 class="card-title">£{{ product.price }} <i class="fas fa-star ml-5"></i>{{ product.rating }} / 5</h5> 
+                    
+                    <a href="#" class="btn btn-success">Buy Me Now</a>
+                  </div>
+                </div>
               </div>
-              <div class="card-footer">
-                <small class="text-muted">{{ product.rating }}</small>
-              </div>
-            </div>
-            
-                        </div>
-                        {% endfor %}       
           </div>
-          
-    </div>
-
-</div>
+      {% endfor %}
 {% endblock %} 
