--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -11,9 +11,9 @@
             <h1 class="logo-font">Products</h1>          
         </div>
     </div>
-    <div class="row">
+    <div class="row ml-3 mr-3">
       {% for product in products %}
-          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-2">
               <div class="card h-100 border-0">
                 <div class="card" >
                   {% if product.image %}
@@ -27,8 +27,7 @@
                   {% endif %}
                   <div class="card-body">
                     <h4 class="card-title">{{ product.name }}</h4>
-                    <h5 class="card-title">£{{ product.price }} <i class="fas fa-star ml-5"></i>{{ product.rating }} / 5</h5> 
-                    
+                    <h5 class="card-title">£{{ product.price }} <i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5</h5> 
                     <a href="#" class="btn btn-success">Buy Me Now</a>
                   </div>
                 </div>
