add url link to prodects page in index.html go shopping button and base.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,7 +10,7 @@
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="go-shopping-button btn btn-lg rounded-4 text-uppercase py-3">Go Shopping</a>
+                    <a href="{% url 'products' %}" class="go-shopping-button btn btn-lg rounded-4 text-uppercase py-3">Go Shopping</a>
                 </h4>
             </div>
         </div>
