--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -27,7 +27,7 @@
                   {% endif %}
                   <div class="card-body">
                     <h4 class="card-title">{{ product.name }}</h4>
-                    <h5 class="card-title">£{{ product.price }} <i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5</h5> 
+                    <h5 class="card-title">£{{ product.price }} <small><i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5 </small></h5> 
                     <a href="#" class="btn btn-success">Buy Me Now</a>
                   </div>
                 </div>
