--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
               <a class="dropdown-item" href="#">By Rating</a>
               <a class="dropdown-item" href="#">By Category</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">All Products</a>
+              <a class="dropdown-item" href="{% url 'products' %}">All Products</a>
             </div>
           </li>
           <li class="nav-item dropdown">
