add product info page template and functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -17,18 +17,18 @@
               <div class="card h-100 border-0">
                 <div class="card" >
                   {% if product.image %}
-                  <a href="">
+                  <a href="{% url 'product_info' product.id %}">
                   <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
                   </a>
                   {% else %}
-                  <a href="">
+                  <a href="{% url 'product_info' product.id %}">
                     <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
                     </a>
                   {% endif %}
                   <div class="card-body">
                     <h4 class="card-title">{{ product.name }}</h4>
                     <h5 class="card-title">£{{ product.price }} <small><i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5 </small></h5> 
-                    <a href="#" class="btn btn-success">Buy Me Now</a>
+                    <a href="{% url 'product_info' product.id %}" class="btn btn-success">Buy Me Now</a>
                   </div>
                 </div>
               </div>
