--- a/templates/base.html
+++ b/templates/base.html
@@ -145,9 +145,7 @@
               </li>
           </ul>
       </div>
-      
-
-        <form class="form-inline my-2 my-lg-0" method="GET" action="">
+        <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'products' %}">
           <input class="form-control mr-sm-2" type="text" placeholder="Search our site" aria-label="Search" name="q"> 
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
