--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -23,6 +23,10 @@
               <p class="card-text">{{ product.description }}</p>
               <h5 class="card-title">£{{ product.price }}</h5> 
               <h5 class="card-title"><small class="text-muted"><i class="fas fa-grin-stars"></i> {{ product.rating }} / 5 </small></h5>
+              {% if product.category %}
+                    <h6><a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                      <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
+                    {% endif %}
             </div>
           </div>
         </div>
