--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -16,7 +16,15 @@
             {% endfor %}      
         </div>
     </div>
-    <hr class="w-50 mb-1">
+    <div class="col-12 col-md-6 order-md-first">
+      <p class="text-muted ml-3">
+          {% if search_term or current_categories or current_sorting != 'None_None' %}
+          <button type="button" class="btn btn-outline-success"><a href="{% url 'products' %}" class="text-decoration-none" style="color: black;" >Products Home</a></button>
+          {% endif %}
+          {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+      </p>
+  </div>
+</div>
     <div class="row ml-3 mr-3">
       {% for product in products %}
           <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-2">
