--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -52,4 +52,30 @@
               </div>
           </div>
       {% endfor %}
+      <button type="button" onclick="topFunction()" class="btn btn-secondary btn-sm" id="myBtn" title="Go to top">Top</button>
 {% endblock %} 
+
+{% block postloadjs %}
+    {{ block.super }}
+<script>
+  //Get the button
+  var mybutton = document.getElementById("myBtn");
+  
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+  
+  function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      mybutton.style.display = "block";
+    } else {
+      mybutton.style.display = "none";
+    }
+  }
+  
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+  }
+  </script>
+  {% endblock %}
