--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head> 
-
+    <link rel="shortcut icon" type="image/png" href="{% static 'assets/images/favicon.ico' %}"/>
     {% block meta %}
         <!-- Required meta tags -->
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
