add add to bag functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 
-
 {% block content %}
 <div class="overlay"></div>
 
@@ -46,7 +45,7 @@
                     <h6><a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
                       <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
                     {% endif %}
-                    <a href="{% url 'product_info' product.id %}" class="btn btn-success">Buy Me Now</a>
+                    <a href="{% url 'product_info' product.id %}" type="button" class="btn btn-success">Buy Me Now</a>
                   </div>
                 </div>
               </div>
