--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -28,6 +28,31 @@
                       <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
                     {% endif %}
             </div>
+            <hr>
+            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+              {% csrf_token %}
+              <div class="form-row">
+                  <div class="col-12">
+                      <p class="ml-3"><strong>Quantity:</strong></p>
+                      <div class="form-group w-25 ml-3">
+                          <div class="input-group">
+                              <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="col-12">
+                      <a href="{% url 'products' %}" class="btn btn-dark ml-3">
+                          <span class="icon">
+                              <i class="fas fa-chevron-left"></i>
+                          </span>
+                          <span class="text-uppercase">Keep Shopping</span>
+                      </a>
+                      <input type="submit" class="btn btn-warning text-uppercase " value="Add to Bag">
+                  </div>
+                  <input type="hidden" name="redirect_url" value="{{ request.path }}">
+              </div>
+          </form>
           </div>
         </div>
       </div>
