--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -16,7 +16,9 @@
     <div class="row">
         <div class="col">
             {% if bag_items %}
-                <div class="table-responsive table-striped"></div>
+                <div class="table-responsive table-striped">
+                    {{ bag_items }}
+                </div>
                 <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
             {% else %}
                 <p class="lead mb-5">Your bag is empty.</p>
