--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -7,19 +7,72 @@
 <div class="container mb-2">
     <div class="row">
         <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">Shopping Bag</h2>
-            <hr>
+            <h2 class="logo-font text-center mt-4 mb-4"> <strong>My Shopping Bag</strong></h2>    
         </div>
     </div>
 
     <div class="row">
         <div class="col">
             {% if bag_items %}
-                <div class="table-responsive table-striped">
-                    {{ bag_items }}
+                <div class="table-responsive">
+                    <table class="table table-sm table-striped">
+                        <thead>
+                          <tr>
+                            <th scope="col"></th>
+                            <th scope="col"><h5>Product Info</h5></th>
+                            <th scope="col"><h5>Price</h5></th>
+                            <th scope="col"><h5>Qty</h5></th>
+                            <th scope="col"><h5>Subtotal</h5></th>
+                          </tr>
+                        </thead>
+                        {% for item in bag_items %} 
+                            <tr>
+                              <td><img src="{{ item.product.image.url }}" alt="{{ product.name }}"></td>
+                              <td>
+                                  <h6>{{ item.product.name }}</h6>
+                                  <p class="text-muted small">SKU: {{ item.product.sku|upper }}</p>
+                              </td>
+                              <td>
+                                <p>£{{ item.product.price }}</p>
+                              </td>
+                              <td>
+                                <p>{{ item.quantity }}</p>
+                              </td>
+                              <td>
+                                <p>£{{ item.product.price }}</p>
+                              </td>
+                            </tr>
+                            {% endfor %}
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <h6 class="mt-2"><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
+                                    <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                                    <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                                    {% if free_delivery_delta > 0 %}
+                                        <p class="mb-1 text-danger">
+                                            You could get free delivery by spending just <strong>£{{ free_delivery_delta }}</strong> more!
+                                        </p>
+                                    {% endif %}
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="5" class="text-right">
+                                    <a href="{% url 'products' %}" class="btn btn-dark btn-lg">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <a href="" class="btn btn-success btn-lg">
+                                        <span class="text-uppercase">Secure Checkout</span>
+                                        <span class="icon">
+                                            <i class="fas fa-lock"></i>
+                                        </span>
+                                    </a>
+                                </td>
+                            </tr>             
+                        </table>
                 </div>
-                <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
             {% else %}
                 <p class="lead mb-5">Your bag is empty.</p>
                 <a href="{% url 'products' %}" class="btn btn-dark">
