--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -31,24 +31,52 @@
             <hr>
             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
               {% csrf_token %}
+              <!-- <div class="form-row"> -->
+                <!-- {% with product.available_sizes as y %}
+                {% if y %}
+                    <div class="col-12">
+                        <p class="ml-4"><strong>Size:</strong></p>
+                        <select class="form-control w-25 ml-3 mb-3" name="product_size" id='id_product_size'>
+                            <option value="xs">XS</option>
+                            <option value="s">S</option>
+                            <option value="m" selected>M</option>
+                            <option value="l">L</option>
+                            <option value="xl">XL</option>
+                        </select>
+                    </div>
+                {% endif %}
+                {% endwith %} -->
+                <!-- {% with product.trainer_sizes as t %}
+                {% if t %}
+                    <div class="col-12">
+                        <p class="ml-4"><strong>Size:</strong></p>
+                        <select class="form-control w-25 ml-3 mb-3" name="product_size" id='id_product_size'>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9" selected>9</option>
+                            <option value="10">10</option>
+                            <option value="11">11</option>
+                        </select>
+                    </div>
+                {% endif %}
+                {% endwith %} -->
               <div class="form-row">
                   <div class="col-12">
-                      <p class="ml-3"><strong>Quantity:</strong></p>
+                      <p class="ml-4"><strong>Quantity:</strong></p>
                       <div class="form-group w-25 ml-3">
                           <div class="input-group">
-                              <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                              <input class="form-control qty_input ml-1" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                           </div>
                       </div>
                   </div>
-
                   <div class="col-12">
-                      <a href="{% url 'products' %}" class="btn btn-dark ml-3">
+                      <a href="{% url 'products' %}" class="btn btn-dark ml-3 mb-3">
                           <span class="icon">
                               <i class="fas fa-chevron-left"></i>
                           </span>
                           <span class="text-uppercase">Keep Shopping</span>
                       </a>
-                      <input type="submit" class="btn btn-warning text-uppercase " value="Add to Bag">
+                      <input type="submit" class="btn btn-warning text-uppercase  mb-3" value="Add to Bag">
                   </div>
                   <input type="hidden" name="redirect_url" value="{{ request.path }}">
               </div>
