adjusted sizes in shopping bag display

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -27,7 +27,8 @@
                         </thead>
                         {% for item in bag_items %} 
                             <tr>
-                              <td><img src="{{ item.product.image.url }}" alt="{{ product.name }}"></td>
+                              <td class="w-25">
+                                  <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ product.name }}"></td>
                               <td>
                                   <h6>{{ item.product.name }}</h6>
                                   <p class="text-muted small">SKU: {{ item.product.sku|upper }}</p>
