--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -38,7 +38,28 @@
                                 <p>£{{ item.product.price }}</p>
                               </td>
                               <td>
-                                <p>{{ item.quantity }}</p>
+                                <form class="form update-form" method="POST" action="">
+                                    {% csrf_token %}
+                                    <div class="form-group w-50">
+                                        <div class="input-group">
+                                          <div class="input-group-prepend" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            </div>
+                                            <input class="form-control qty_input" type="number" 
+                                            name="quantity" value="{{ item.quantity }}" min="1" max="99" 
+                                            data-item_id="{{ product.id }}" 
+                                            id="id_qty_{{ product.id }}">
+                                            <div class="input-group-append" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                          </div>
+                                          {% if item.product.trainer_sizes or product.available_sizes %}
+                                          <input type="hidden" name="product_size" value="{{ item.size }}">
+                                      {% endif %}
+                                        </div>
+                                    </div>
+                                </form>   
+                                <div class="btn-group btn-group-sm " role="group" aria-label="Basic example">
+                                   <a><button type="button" class="btn btn-info">Update</button></a>
+                                    <a><button type="button" class="btn btn-warning">Remove</button></a>
+                                  </div> 
                               </td>
                               <td>
                                 <p>£{{ item.product.price }}</p>
