--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load bag_tools %}
 
 {% block content %}
 <div class="overlay"></div>
@@ -38,17 +38,17 @@
                                 <p>£{{ item.product.price }}</p>
                               </td>
                               <td>
-                                <form class="form update-form" method="POST" action="">
+                                <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                     {% csrf_token %}
                                     <div class="form-group w-50">
                                         <div class="input-group">
-                                          <div class="input-group-prepend" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                          <div class="input-group-prepend" data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                             </div>
                                             <input class="form-control qty_input" type="number" 
                                             name="quantity" value="{{ item.quantity }}" min="1" max="99" 
-                                            data-item_id="{{ product.id }}" 
-                                            id="id_qty_{{ product.id }}">
-                                            <div class="input-group-append" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            data-item_id="{{ item.item_id}}" 
+                                            id="id_qty_{{ item.item_id}}">
+                                            <div class="input-group-append" data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                                           </div>
                                           {% if item.product.trainer_sizes or product.available_sizes %}
                                           <input type="hidden" name="product_size" value="{{ item.size }}">
@@ -58,11 +58,11 @@
                                 </form>   
                                 <div class="btn-group btn-group-sm " role="group" aria-label="Basic example">
                                    <a><button type="button" class="btn btn-info update-link">Update</button></a>
-                                    <a><button type="button" class="btn btn-danger remove-item" id="remove_{{ product.id }}" data-size="{{ item.size }}">Remove</button></a>
+                                    <a><button type="button" class="btn btn-danger remove-item" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}">Remove</button></a>
                                   </div> 
                               </td>
                               <td>
-                                <p>£{{ item.product.price }}</p>
+                                <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                               </td>
                             </tr>
                             {% endfor %}
@@ -113,7 +113,7 @@
 {% block postloadjs %}
 {{ block.super }}
 <!-- Javascript taken from boutique Ado walkthrough project by code institute -->
-<script type="text/javascript">
+<script type="button/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
@@ -124,9 +124,9 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `/bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+        var size = $(this).data('product_size');
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
 
         $.post(url, data)
          .done(function() {
