--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -65,7 +65,7 @@
                       <p class="ml-4"><strong>Quantity:</strong></p>
                       <div class="form-group w-25 ml-3">
                           <div class="input-group">
-                            <div class="input-group-prepend" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                            <div class="input-group-prepend" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                               </div>
                               <input class="form-control qty_input ml-1" type="number" 
                               name="quantity" value="1" min="1" max="99" 
@@ -92,4 +92,9 @@
         </div>
       </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
