--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -42,7 +42,7 @@
                                     {% csrf_token %}
                                     <div class="form-group w-50">
                                         <div class="input-group">
-                                          <div class="input-group-prepend" data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                          <div class="input-group-prepend" data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                                             </div>
                                             <input class="form-control qty_input" type="number" 
                                             name="quantity" value="{{ item.quantity }}" min="1" max="99" 
@@ -112,8 +112,9 @@
 
 {% block postloadjs %}
 {{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 <!-- Javascript taken from boutique Ado walkthrough project by code institute -->
-<script type="button/javascript">
+<script type="text/javascript">
     // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
