add additional message for user info and shopping bag toast preview

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -71,3 +71,11 @@ body {
 .toast-capper {
     height: 10px;
 }
+
+/* ------------------------------- shopping bag toast */
+
+.bag-notification-wrapper {
+    height: 100px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
