--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -92,7 +92,7 @@
                          <!-- Pass the client secret to the view so we can get the payment intent id -->
                          <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
-                    <div class="submit-button text-right mt-5 mb-2">                    
+                    <div class="submit-button text-right mb-2">                    
 						<a href="{% url 'view_bag' %}" class="btn btn-dark">
 							<span class="icon">
 								<i class="fas fa-chevron-left"></i>
