format and tested code

--- a/templates/base.html
+++ b/templates/base.html
@@ -296,8 +296,7 @@
                   <div class="text-center" style="color: green">
                     <div><i class="fas fa-shopping-basket fa-lg"></i></div>
                     <p class="my-0">
-                      {% if grand_total %} ${{ grand_total|floatformat:2 }} {%
-                      else %} £0.00 {% endif %}
+                      {% if grand_total %} £{{ grand_total|floatformat:2 }} {% else %} £0.00 {% endif %}
                     </p>
                   </div>
                 </a>
