--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,143 +1,196 @@
-{% extends "base.html" %}
-{% load static %}
-{% load bag_tools %}
-
+{% extends "base.html" %} 
+{% load static %} 
+{% load bag_tools %} 
 {% block content %}
-<div class="overlay"></div>
-<div class="container mb-2">
-    <div class="row">
-        <div class="col">
-            <h2 class="logo-font text-center mt-4 mb-4"> <strong>My Shopping Bag</strong></h2>    
-        </div>
-    </div>
 
-    <div class="row">
+    <div class="overlay"></div>
+    <div class="container mb-2">
+      <div class="row">
         <div class="col">
-            {% if bag_items %}
-                <div class="table-responsive">
-                    <table class="table table-sm table-striped">
-                        <thead>
-                          <tr>
-                            <th scope="col"></th>
-                            <th scope="col"><h5>Product Info</h5></th>
-                            <th scope="col"><h5>Price</h5></th>
-                            <th scope="col"><h5>Qty</h5></th>
-                            <th scope="col"><h5>Subtotal</h5></th>
-                          </tr>
-                        </thead>
-                        {% for item in bag_items %} 
-                            <tr>
-                              <td class="w-25">
-                                {% if item.product.image %}
-                                <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ item.product.name }}"> 
-                                {% else %}
-                                <img class="img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
-                                {% endif %}
-                              </td>
-                              <td>
-                                  <h6>{{ item.product.name }}</h6>
-                                  <p class="my-0 mb-2"><strong>Size: </strong>{% if item.product.available_sizes or item.product.trainer_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
-                                  <p class="text-muted small">SKU: {{ item.product.sku|upper }}</p>
-                              </td>
-                              <td>
-                                <p>£{{ item.product.price }}</p>
-                              </td>
-                              <td>
-                                <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
-                                    {% csrf_token %}
-                                    <div class="form-group w-50">
-                                        <div class="input-group">
-                                          <div class="input-group-prepend" data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                                            </div>
-                                            <input class="form-control qty_input" type="number" 
-                                            name="quantity" value="{{ item.quantity }}" min="1" max="99" 
-                                            data-item_id="{{ item.item_id}}" 
-                                            id="id_qty_{{ item.item_id}}">
-                                            <div class="input-group-append" data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                                          </div>
-                                          {% if item.product.trainer_sizes or product.available_sizes %}
-                                          <input type="hidden" name="product_size" value="{{ item.size }}">
-                                      {% endif %}
-                                        </div>
-                                    </div>
-                                </form>   
-                                <div class="btn-group btn-group-sm " role="group" aria-label="Basic example">
-                                   <a><button type="button" class="btn btn-info update-link">Update</button></a>
-                                    <a><button type="button" class="btn btn-danger remove-item" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}">Remove</button></a>
-                                  </div> 
-                              </td>
-                              <td>
-                                <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
-                              </td>
-                            </tr>
-                            {% endfor %}
-                            <tr>
-                                <td colspan="5" class="text-right">
-                                    <h6 class="mt-2"><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
-                                    <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
-                                    <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
-                                    {% if free_delivery_delta > 0 %}
-                                        <p class="mb-1 text-danger">
-                                            You could get free delivery by spending just <strong>£{{ free_delivery_delta }}</strong> more!
-                                        </p>
-                                    {% endif %}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-dark btn-lg">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-success btn-lg">
-                                        <span class="text-uppercase">Secure Checkout</span>
-                                        <span class="icon">
-                                            <i class="fas fa-lock"></i>
-                                        </span>
-                                    </a>
-                                </td>
-                            </tr>             
-                        </table>
-                </div>
-            {% else %}
-                <p class="lead mb-5">Your bag is empty.</p>
-                <a href="{% url 'products' %}" class="btn btn-dark">
+          <h2 class="logo-font text-center mt-4 mb-4">
+            <strong>My Shopping Bag</strong>
+          </h2>
+        </div>
+      </div>
+    
+      <div class="row">
+        <div class="col">
+          {% if bag_items %}
+          <div class="table-responsive">
+            <table class="table table-sm table-striped">
+              <thead>
+                <tr>
+                  <th scope="col"></th>
+                  <th scope="col"><h5>Product Info</h5></th>
+                  <th scope="col"><h5>Price</h5></th>
+                  <th scope="col"><h5>Qty</h5></th>
+                  <th scope="col"><h5>Subtotal</h5></th>
+                </tr>
+              </thead>
+              {% for item in bag_items %}
+              <tr>
+                <td class="w-25">
+                  {% if item.product.image %}
+                  <img
+                    class="img-fluid"
+                    src="{{ item.product.image.url }}"
+                    alt="{{ item.product.name }}"
+                  />
+                  {% else %}
+                  <img
+                    class="img-fluid"
+                    src="{{ MEDIA_URL }}noimage.png"
+                    alt="{{ item.product.name }}"
+                  />
+                  {% endif %}
+                </td>
+                <td>
+                  <h6>{{ item.product.name }}</h6>
+                  <p class="my-0 mb-2">
+                    <strong>Size: </strong>{% if item.product.available_sizes or item.product.trainer_sizes %}{{ item.size|upper }}{% else%}N/A{% endif %}
+                  </p>
+                  <p class="text-muted small">SKU: {{ item.product.sku|upper }}</p>
+                </td>
+                <td>
+                  <p>£{{ item.product.price }}</p>
+                </td>
+                <td>
+                  <form
+                    class="form update-form"
+                    method="POST"
+                    action="{% url 'adjust_bag' item.item_id %}"
+                  >
+                    {% csrf_token %}
+                    <div class="form-group w-50">
+                      <div class="input-group">
+                        <div
+                          class="input-group-prepend"
+                          data-item_id="{{ item.item_id }}"
+                          id="decrement-qty_{{ item.item_id }}"
+                        ></div>
+                        <input
+                          class="form-control qty_input"
+                          type="number"
+                          name="quantity"
+                          value="{{ item.quantity }}"
+                          min="1"
+                          max="99"
+                          data-item_id="{{ item.item_id}}"
+                          id="id_qty_{{ item.item_id}}"
+                        />
+                        <div
+                          class="input-group-append"
+                          data-item_id="{{ item.item_id }}"
+                          id="increment-qty_{{ item.item_id }}"
+                        ></div>
+                        {% if item.product.trainer_sizes or product.available_sizes %}
+                        <input
+                          type="hidden"
+                          name="product_size"
+                          value="{{ item.size }}"
+                        />
+                        {% endif %}
+                      </div>
+                    </div>
+                  </form>
+                  <div
+                    class="btn-group btn-group-sm"
+                    role="group"
+                    aria-label="Basic example"
+                  >
+                    <a
+                      ><button type="button" class="btn btn-info update-link">
+                        Update
+                      </button></a
+                    >
+                    <a
+                      ><button
+                        type="button"
+                        class="btn btn-danger remove-item"
+                        id="remove_{{ item.item_id }}"
+                        data-product_size="{{ item.size }}"
+                      >
+                        Remove
+                      </button></a
+                    >
+                  </div>
+                </td>
+                <td>
+                  <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                </td>
+              </tr>
+              {% endfor %}
+              <tr>
+                <td colspan="5" class="text-right">
+                  <h6 class="mt-2">
+                    <strong>Bag Total: £{{ total|floatformat:2 }}</strong>
+                  </h6>
+                  <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                  <h4 class="mt-4">
+                    <strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong>
+                  </h4>
+                  {% if free_delivery_delta > 0 %}
+                  <p class="mb-1 text-danger">
+                    You could get free delivery by spending just
+                    <strong>£{{ free_delivery_delta }}</strong> more!
+                  </p>
+                  {% endif %}
+                </td>
+              </tr>
+              <tr>
+                <td colspan="5" class="text-right">
+                  <a href="{% url 'products' %}" class="btn btn-dark btn-lg">
                     <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
+                      <i class="fas fa-chevron-left"></i>
                     </span>
                     <span class="text-uppercase">Keep Shopping</span>
-                </a>
-            {% endif %}
+                  </a>
+                  <a href="{% url 'checkout' %}" class="btn btn-success btn-lg">
+                    <span class="text-uppercase">Secure Checkout</span>
+                    <span class="icon">
+                      <i class="fas fa-lock"></i>
+                    </span>
+                  </a>
+                </td>
+              </tr>
+            </table>
+          </div>
+          {% else %}
+          <p class="lead mb-5">Your bag is empty.</p>
+          <a href="{% url 'products' %}" class="btn btn-dark">
+            <span class="icon">
+              <i class="fas fa-chevron-left"></i>
+            </span>
+            <span class="text-uppercase">Keep Shopping</span>
+          </a>
+          {% endif %}
         </div>
+      </div>
     </div>
-</div>
-{% endblock %}
-
-{% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
-<!-- Javascript taken from boutique Ado walkthrough project by code institute -->
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function(e) {
-        var form = $(this).prev('.update-form');
+    {% endblock %} 
+    {% block postloadjs %} 
+    {{ block.super }} 
+    {% include 'products/includes/quantity_input_script.html' %}
+    <!-- Javascript taken from boutique Ado walkthrough project by code institute -->
+    <script>
+      // Update quantity on click
+      $(".update-link").click(function (e) {
+        var form = $(this).prev(".update-form");
         form.submit();
-    })
-
-    // Remove item and reload on click
-    $('.remove-item').click(function(e) {
+      });
+    
+      // Remove item and reload on click
+      $(".remove-item").click(function (e) {
         var csrfToken = "{{ csrf_token }}";
-        var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('product_size');
+        var itemId = $(this).attr("id").split("remove_")[1];
+        var size = $(this).data("product_size");
         var url = `/bag/remove/${itemId}/`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
-
-        $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
-    })
-</script>
-{% endblock %}
+        var data = { csrfmiddlewaretoken: csrfToken, product_size: size };
+    
+        $.post(url, data).done(function () {
+          location.reload();
+        });
+      });
+    </script>
+    {% endblock %}
+    
