--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -1,106 +1,151 @@
-{% extends "base.html" %}
-{% load static %}
-
+{% extends "base.html" %} 
+{% load static %} 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container-fluid">
-    <div class="card mt-2">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            {% if product.image %}
-            <a href="{{ product.image.url }}" target="_blank">
-            <img src="{{ product.image.url }}" class="card-img" alt="{{ product.name }}">
-            </a>
-            {% else %}
-            <a href="">
-                <img src="{{ MEDIA_URL }}noimage.png" class="card-img" alt="{{ product.name }}">
-            </a>
-            {% endif %}
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h4 class="card-title">{{ product.name }}</h4>
-              <p class="card-text">{{ product.description }}</p>
-              <h5 class="card-title">£{{ product.price }}</h5> 
-              <h5 class="card-title"><small class="text-muted"><i class="fas fa-grin-stars"></i> {{ product.rating }} / 5 </small></h5>
-              {% if product.category %}
-                    <h6><a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                      <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
-                    {% endif %}
-                    {% if request.user.is_superuser %}
-                    <small>
-                      <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                      <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                    </small>
-              {% endif %}      
-            </div>
-            <hr>
-            <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-              {% csrf_token %}
-              <div class="form-row"> 
-                {% with product.available_sizes as y %}
-                {% if y %}
-                    <div class="col-12">
-                        <p class="ml-4"><strong>Size:</strong></p>
-                        <select class="form-control w-25 ml-3 mb-3" name="product_size" id='id_product_size'>
-                            <option value="xs">XS</option>
-                            <option value="s">S</option>
-                            <option value="m" selected>M</option>
-                            <option value="l">L</option>
-                            <option value="xl">XL</option>
-                        </select>
-                    </div>
-                {% endif %}
-                {% endwith %} 
-                {% with product.trainer_sizes as t %}
-                {% if t %}
-                    <div class="col-12">
-                        <p class="ml-4"><strong>Size:</strong></p>
-                        <select class="form-control w-25 ml-3 mb-3" name="product_size" id='id_product_size'>
-                            <option value="7">7</option>
-                            <option value="8">8</option>
-                            <option value="9" selected>9</option>
-                            <option value="10">10</option>
-                            <option value="11">11</option>
-                        </select>
-                    </div>
-                {% endif %}
-                {% endwith %}
-              <div class="form-row">
-                  <div class="col-12">
-                      <p class="ml-4"><strong>Quantity:</strong></p>
-                      <div class="form-group w-25 ml-3">
-                          <div class="input-group">
-                            <div class="input-group-prepend" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                              </div>
-                              <input class="form-control qty_input ml-1" type="number" 
-                              name="quantity" value="1" min="1" max="99" 
-                              data-item_id="{{ product.id }}" 
-                              id="id_qty_{{ product.id }}">
-                              <div class="input-group-append" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                            </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-12">
-                      <a href="{% url 'products' %}" class="btn btn-dark ml-3 mb-3">
-                          <span class="icon">
-                              <i class="fas fa-chevron-left"></i>
-                          </span>
-                          <span class="text-uppercase">Keep Shopping</span>
-                      </a>
-                      <input type="submit" class="btn btn-warning text-uppercase  mb-3" value="Add to Bag">
-                  </div>
-                  <input type="hidden" name="redirect_url" value="{{ request.path }}">
-              </div>
-          </form>
-          </div>
+
+<div class="overlay"></div>
+<div class="container-fluid">
+  <div class="card mt-2">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        {% if product.image %}
+        <a href="{{ product.image.url }}" target="_blank">
+          <img
+            src="{{ product.image.url }}"
+            class="card-img"
+            alt="{{ product.name }}"
+          />
+        </a>
+        {% else %}
+        <a href="">
+          <img
+            src="{{ MEDIA_URL }}noimage.png"
+            class="card-img"
+            alt="{{ product.name }}"
+          />
+        </a>
+        {% endif %}
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h4 class="card-title">{{ product.name }}</h4>
+          <p class="card-text">{{ product.description }}</p>
+          <h5 class="card-title">£{{ product.price }}</h5>
+          <h5 class="card-title">
+            <small class="text-muted"
+              ><i class="fas fa-grin-stars"></i> {{ product.rating }} / 5
+            </small>
+          </h5>
+          {% if product.category %}
+          <h6>
+            <a
+              class="text-muted"
+              href="{% url 'products' %}?category={{ product.category.name }}"
+            >
+              <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a
+            >
+          </h6>
+          {% endif %} 
+          {% if request.user.is_superuser %}
+          <small>
+            <a href="{% url 'edit_product' product.id %}">Edit</a> |
+            <a class="text-danger" href="{% url 'delete_product' product.id %}"
+              >Delete</a
+            >
+          </small>
+          {% endif %}
         </div>
+        <hr />
+        <form
+          class="form"
+          action="{% url 'add_to_bag' product.id %}"
+          method="POST"
+        >
+          {% csrf_token %} 
+          {% with product.available_sizes as y %} 
+          {% if y %}
+          <div class="col-12">
+            <p class="ml-4"><strong>Size:</strong></p>
+            <select
+              class="form-control w-25 ml-3 mb-3"
+              name="product_size"
+              id="id_product_size"
+            >
+              <option value="xs">XS</option>
+              <option value="s">S</option>
+              <option value="m" selected>M</option>
+              <option value="l">L</option>
+              <option value="xl">XL</option>
+            </select>
+          </div>
+          {% endif %} 
+          {% endwith %} 
+          {% with product.trainer_sizes as t %} 
+          {% if t %}
+          <div class="col-12">
+            <p class="ml-4"><strong>Size:</strong></p>
+            <select
+              class="form-control w-25 ml-3 mb-3"
+              name="product_size"
+              id="id_product_size"
+            >
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9" selected>9</option>
+              <option value="10">10</option>
+              <option value="11">11</option>
+            </select>
+          </div>
+          {% endif %} 
+          {% endwith %}
+
+          <div class="col-12">
+            <p class="ml-4"><strong>Quantity:</strong></p>
+            <div class="form-group w-25 ml-3">
+              <div class="input-group">
+                <div
+                  class="input-group-prepend"
+                  data-item_id="{{ product.id }}"
+                  id="decrement-qty_{{ product.id }}"
+                ></div>
+                <input
+                  class="form-control qty_input ml-1"
+                  type="number"
+                  name="quantity"
+                  value="1"
+                  min="1"
+                  max="99"
+                  data-item_id="{{ product.id }}"
+                  id="id_qty_{{ product.id }}"
+                />
+                <div
+                  class="input-group-append"
+                  data-item_id="{{ product.id }}"
+                  id="increment-qty_{{ product.id }}"
+                ></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <a href="{% url 'products' %}" class="btn btn-dark ml-3 mb-3">
+              <span class="icon">
+                <i class="fas fa-chevron-left"></i>
+              </span>
+              <span class="text-uppercase">Keep Shopping</span>
+            </a>
+            <input
+              type="submit"
+              class="btn btn-warning text-uppercase mb-3"
+              value="Add to Bag"
+            />
+          </div>
+          <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+        </form>
       </div>
     </div>
-{% endblock %}
-
-{% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
+  </div>
+</div>
+{% endblock %} 
+{% block postloadjs %} 
+{{ block.super }} 
+{% include 'products/includes/quantity_input_script.html' %} 
 {% endblock %}
