--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,86 +1,129 @@
-{% extends "base.html" %}
-{% load static %}
-
-
+{% extends "base.html" %} 
+{% load static %} 
 {% block content %}
 <div class="overlay"></div>
 
-    <div class="row">
-        <div class="col text-center mt-2">
-            <h1 class="logo-font">Products</h1>  
-            {% for c in current_categories %}
-                    <a class="badge badge-dark" href="{% url 'products' %}?category={{ c.name }}">
-                        <h5>{{ c.friendly_name }}</h5>
-                    </a>
-            {% endfor %}      
-        </div>
-    </div>
-    <div class="col-12 col-md-6 order-md-first">
-      <p class="text-muted ml-3">
-          {% if search_term or current_categories or current_sorting != 'None_None' %}
-          <button type="button" class="btn btn-outline-success"><a href="{% url 'products' %}" class="text-decoration-none" style="color: black;" >Products Home</a></button>
-          {% endif %}
-          {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-      </p>
+<div class="row">
+  <div class="col text-center mt-2">
+    <h1 class="logo-font">Products</h1>
+    {% for c in current_categories %}
+    <a
+      class="badge badge-dark"
+      href="{% url 'products' %}?category={{ c.name }}"
+    >
+      <h5>{{ c.friendly_name }}</h5>
+    </a>
+    {% endfor %}
   </div>
 </div>
-    <div class="row ml-3 mr-3">
-      {% for product in products %}
-          <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-2">
-              <div class="card h-100 border-0">
-                <div class="card" >
-                  {% if product.image %}
-                  <a href="{% url 'product_info' product.id %}">
-                  <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
-                  </a>
-                  {% else %}
-                  <a href="{% url 'product_info' product.id %}">
-                    <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="{{ product.name }}">
-                    </a>
-                  {% endif %}
-                  <div class="card-body">
-                    <h4 class="card-title">{{ product.name }}</h4>
-                    <h5 class="card-title">£{{ product.price }} <small><i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5 </small></h5> 
-                    {% if product.category %}
-                    <h6><a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                      <i class="fas fa-barcode"></i> {{ product.category.friendly_name }}</a></h6>                  
-                    {% endif %}
-                    {% if request.user.is_superuser %}
-                          <small>
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
-                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                          </small>
-                    {% endif %}
-                    <a href="{% url 'product_info' product.id %}" type="button" class="btn btn-success">Buy Me Now</a>
-                  </div>
-                </div>
-              </div>
-          </div>
-      {% endfor %}
-      <button type="button" onclick="topFunction()" class="btn btn-secondary btn-sm" id="myBtn" title="Go to top">Top</button>
-{% endblock %} 
+<div class="col-12 col-md-6 order-md-first">
+  <p class="text-muted ml-3">
+    {% if search_term or current_categories or current_sorting != 'None_None' %}
+    <button type="button" class="btn btn-outline-success">
+      <a
+        href="{% url 'products' %}"
+        class="text-decoration-none"
+        style="color: black"
+        >Products Home</a
+      >
+    </button>
+    {% endif %} 
+    {{ products|length }} Products{% if search_term %} found for<strong>"{{ search_term }}"</strong>{% endif %}
+  </p>
+</div>
 
-{% block postloadjs %}
-    {{ block.super }}
-<script>
-  //Get the button
-  var mybutton = document.getElementById("myBtn");
-  
-  // When the user scrolls down 20px from the top of the document, show the button
-  window.onscroll = function() {scrollFunction()};
-  
-  function scrollFunction() {
-    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-      mybutton.style.display = "block";
-    } else {
-      mybutton.style.display = "none";
+<div class="row ml-3 mr-3">
+  {% for product in products %}
+  <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 mt-2">
+    <div class="card h-100 border-0">
+      <div class="card">
+        {% if product.image %}
+        <a href="{% url 'product_info' product.id %}">
+          <img
+            src="{{ product.image.url }}"
+            class="card-img-top"
+            alt="{{ product.name }}"
+          />
+        </a>
+        {% else %}
+        <a href="{% url 'product_info' product.id %}">
+          <img
+            src="{{ MEDIA_URL }}noimage.png"
+            class="card-img-top"
+            alt="{{ product.name }}"
+          />
+        </a>
+        {% endif %}
+        <div class="card-body">
+          <h4 class="card-title">{{ product.name }}</h4>
+          <h5 class="card-title">
+            £{{ product.price }}
+            <small
+              ><i class="fas fa-grin-stars ml-5"></i> {{ product.rating }} / 5
+            </small>
+          </h5>
+          {% if product.category %}
+          <h6>
+            <a
+              class="text-muted"
+              href="{% url 'products' %}?category={{ product.category.name }}"
+            >
+              <i class="fas fa-barcode"></i> {{ product.category.friendly_name}}</a
+            >
+          </h6>
+          {% endif %} 
+          {% if request.user.is_superuser %}
+          <small>
+            <a href="{% url 'edit_product' product.id %}">Edit</a> |
+            <a class="text-danger" href="{% url 'delete_product' product.id %}"
+              >Delete</a
+            >
+          </small>
+          {% endif %}
+          <a href="{% url 'product_info' product.id %}" class="btn btn-success"
+            >Buy Me Now</a
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+  <button
+    type="button"
+    onclick="topFunction()"
+    class="btn btn-secondary btn-sm"
+    id="myBtn"
+    title="Go to top"
+  >
+    Top
+  </button>
+  {% endblock %} {% block postloadjs %} {{ block.super }}
+  <script>
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+      scrollFunction();
+    };
+
+    function scrollFunction() {
+      if (
+        document.body.scrollTop > 20 ||
+        document.documentElement.scrollTop > 20
+      ) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
     }
-  }
-  
-  // When the user clicks on the button, scroll to the top of the document
-  function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-  }
+
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
   </script>
+  </div>
   {% endblock %}
+
