--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,68 +1,80 @@
-{% extends "base.html" %}
-{% load static %}
+{% extends "base.html" %} 
+{% load static %} 
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}">
-{% endblock %}
+<link rel="stylesheet" href="{% static 'profiles/css/profile.css' %}" />
+{% endblock %} 
 
 {% block content %}
+
 <div class="overlay"></div>
 <div class="container mb-2">
-    <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="logo-font mb-4">My Profile</h2>
-            <hr>
-        </div>
+  <div class="row">
+    <div class="col">
+      <hr />
+      <h2 class="logo-font mb-4">My Profile</h2>
+      <hr />
     </div>
-    <div class="row">
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">Default Delivery Information</p>
-            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-                {% csrf_token %}
-                {{ form|crispy }}
-                <button class="btn btn-warning text-uppercase float-right">Update Information</button>
-            </form>
-        </div>
-        <div class="col-12 col-lg-6">
-            <p class="text-muted">Order History</p>
-            <div class="order-history table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                      <tr>
-                        <th scope="col">Order Number</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Items</th>
-                        <th scope="col">Order Total</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        {% for order in orders %}
-                                <tr>
-                                    <td>
-                                        <a href="{% url 'order_history' order.order_number %}"
-                                        title="{{ order.order_number }}">
-                                            {{ order.order_number|truncatechars:6 }}
-                                        </a>
-                                    </td>
-                                    <td>{{ order.date }}</td>
-                                    <td>
-                                        <ul class="list-unstyled">
-                                            {% for item in order.lineitems.all %}
-                                                <li class="small">
-                                                    {% if item.product.available_sizes or item.product.trainer_sizes %}
-                                                        Size {{ item.product.size|upper }}
-                                                    {% endif %}{{ item.product.name }} x{{ item.quantity }}
-                                                </li>
-                                            {% endfor %}
-                                        </ul>
-                                    </td>
-                                    <td>£{{ order.grand_total }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-{% endblock %}
+  </div>
+  <div class="row">
+    <div class="col-12 col-lg-6">
+      <p class="text-muted">Default Delivery Information</p>
+      <form
+        class="mt-3"
+        action="{% url 'profile' %}"
+        method="POST"
+        id="profile-update-form"
+      >
+        {% csrf_token %} 
+        {{ form|crispy }}
+        <button class="btn btn-warning text-uppercase float-right">
+          Update Information
+        </button>
+      </form>
+    </div>
+    <div class="col-12 col-lg-6">
+      <p class="text-muted">Order History</p>
+      <div class="order-history table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th scope="col">Order Number</th>
+              <th scope="col">Date</th>
+              <th scope="col">Items</th>
+              <th scope="col">Order Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for order in orders %}
+            <tr>
+              <td>
+                <a
+                  href="{% url 'order_history' order.order_number %}"
+                  title="{{ order.order_number }}"
+                >
+                  {{ order.order_number|truncatechars:6 }}
+                </a>
+              </td>
+              <td>{{ order.date }}</td>
+              <td>
+                <ul class="list-unstyled">
+                  {% for item in order.lineitems.all %}
+                  <li class="small">
+                    {% if item.product.available_sizes or item.product.trainer_sizes %} 
+                    Size {{ item.product.size|upper }} 
+                    {% endif %}
+                    {{ item.product.name }} x{{ item.quantity }}
+                  </li>
+                  {% endfor %}
+                </ul>
+              </td>
+              <td>£{{ order.grand_total }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  {% endblock %}
+
