update readme file

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -99,7 +99,10 @@
                     aria-label="Basic example"
                   >
                     <a
-                      ><button type="button" class="btn btn-info update-link">
+                      ><button 
+                      type="button" 
+                      class="btn btn-info update-link"
+                      >
                         Update
                       </button></a
                     >
