update to bag buttons

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -83,7 +83,7 @@
                       </div>
                     </div>
                   </form>
-                   <a class="update-link"><button class="btn btn-info btn-sm">
+                   <a class="update-link"><button class="btn btn-info btn-sm ml-3">
                      Update</button>
                     </a>
                   <a class="remove-item" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}">
