add footer with email subscription social links and privacy policy

--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
     {% endblock %} 
 
     {% block extra_css %} 
