--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -16,4 +16,57 @@
         </div>
     </div>
 </div>
+<footer class="container-wrapper">
+    <div class="container quotes-container content-container">
+      <section class="footer">
+        <div class="row">
+          <div class="col-12 page-header mb-2">
+            <h2 class="text-uppercase mt-3 text-center">Stay in touch:</h2>
+            <hr>
+          </div>
+       </div>
+       <div class="row">
+         <div class="col-12 col-md-6">
+           <h3>Social</h3>
+           <p>Keep up to date with all our latest offers</p>
+           <a href="https://www.facebook.com/My-Sustainable-Life-104609065601831" target="_blank"><i class="fa fa-facebook-square"></i> Follow us on Facebook!</a>
+           <hr>
+           <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i> Follow us on Instagram!</a>
+           <hr>
+           <a href="https://www.privacypolicygenerator.info/live.php?token=keJtHAIBcTcwnLPKAAB4sAzDUmzcAhZT" target="_blank"> Privacy Policy</a>
+         </div>
+         <div class="col-12 col-md-6">
+           <h2 class="ml-3">Subscribe!</h2>
+           <p class="ml-3">Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
+           <!-- Begin Mailchimp Signup Form -->
+<div id="mc_embed_signup">
+<form action="https://herokuapp.us12.list-manage.com/subscribe/post?u=3532e3f9050996a0c8da50a2f&amp;id=3f5fa3ba26" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+	<div id="mce-responses" class="clear foot">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div>
+	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_3532e3f9050996a0c8da50a2f_3f5fa3ba26" tabindex="-1" value=""></div>
+        <div class="optionalParent">
+            <div class="clear foot">
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                <p class="brandingLogo"><a href="http://eepurl.com/h2Y-bn" title="Mailchimp - email marketing made easy and fun"><img src="https://eep.io/mc-cdn-images/template_images/branding_logo_text_dark_dtp.svg"></a></p>
+            </div>
+        </div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<!--End mc_embed_signup-->
+         </div>
+       </div>
+     </section>
+   </div>
+ </footer>
 {% endblock %} 
