--- a/static/css/base.css
+++ b/static/css/base.css
@@ -107,3 +107,23 @@ body {
     border-color: #dc3545;
     border-radius: 0;
 }
+
+.container-wrapper {
+    position: flex;
+    bottom: 0;
+    width: 100%;
+    /* Height of the footer*/ 
+    height: 430px;
+    background: #FAF9F6;
+}
+
+/* mailchimp*/ 
+#mc_embed_signup {
+    background:#FAF9F6; 
+    clear:left; 
+    font:14px Helvetica,Arial,sans-serif;  
+    width:600px;
+}
+
+
+	
