add useful links to footer, add meta keyword content, add sitemap.xml and robots.txt files

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -29,11 +29,13 @@
          <div class="col-12 col-md-6">
            <h3>Social</h3>
            <p>Keep up to date with all our latest offers</p>
-           <a href="https://www.facebook.com/My-Sustainable-Life-104609065601831" target="_blank"><i class="fa fa-facebook-square"></i> Follow us on Facebook!</a>
+           <a href="https://www.facebook.com/My-Sustainable-Life-104609065601831" target="_blank" rel="noopener"><i class="fa fa-facebook-square"></i> Follow us on Facebook!</a>
            <hr>
-           <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram"></i> Follow us on Instagram!</a>
+           <h3>Useful Links</h3>
+           <p><a href="https://friendsoftheearth.uk/" target="_blank" rel="noopener" style="color: green;">Become a friend of the Earth</a></p>
+           <p><a href="https://www.greenpeace.org.uk/" target="_blank" rel="noopener" style="color: green;">Green Peace</a></p>
            <hr>
-           <a href="https://www.privacypolicygenerator.info/live.php?token=keJtHAIBcTcwnLPKAAB4sAzDUmzcAhZT" target="_blank"> Privacy Policy</a>
+           <a href="https://www.privacypolicygenerator.info/live.php?token=keJtHAIBcTcwnLPKAAB4sAzDUmzcAhZT" target="_blank" rel="noopener" style="color: black ;"> Privacy Policy</a>
          </div>
          <div class="col-12 col-md-6">
            <h2 class="ml-3">Subscribe!</h2>
