--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Ecommerce" />
+    <meta name="description" 
+        content="Sustainable food and clothing company. 
+        Selling local, ethical and sustainable clothes or food products " />
+    <meta name="keywords" 
+        content=" Sustainable, food, clothes, jeans, trainers, household,
+        Groceries, cooking, dining, fresh, chilled, home, accessories sales, deals, clearance"/>
     <meta name="author" content="developer" />
     {% endblock %}
 
