add media queries to footer

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -36,10 +36,11 @@
            <p><a href="https://www.greenpeace.org.uk/" target="_blank" rel="noopener" style="color: green;">Green Peace</a></p>
            <hr>
            <a href="https://www.privacypolicygenerator.info/live.php?token=keJtHAIBcTcwnLPKAAB4sAzDUmzcAhZT" target="_blank" rel="noopener" style="color: black ;"> Privacy Policy</a>
+           <hr>
          </div>
          <div class="col-12 col-md-6">
-           <h2 class="ml-3">Subscribe!</h2>
-           <p class="ml-3">Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
+           <h2>Subscribe!</h2>
+           <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
            <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
 <form action="https://herokuapp.us12.list-manage.com/subscribe/post?u=3532e3f9050996a0c8da50a2f&amp;id=3f5fa3ba26" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
