created a wishlist for the user adding wishlist user model field and logic

--- a/life_tips/templates/life_tips/tips.html
+++ b/life_tips/templates/life_tips/tips.html
@@ -10,7 +10,8 @@
             <hr>
             <h2 class="logo-font mb-4">Sustainable Life Tips</h2>
             <hr>
-            <h5 class="text-muted">Add a Tip</h5>
+            <h5 class="text-muted">Add any information you like here to give people tips on living a sustainable life!
+            </h5>
             <hr>
         </div>
     </div>
